fixed collapse panel margin issue

--- a/appBootstrap.css
+++ b/appBootstrap.css
@@ -21,3 +21,10 @@ body {
 li {
 	list-style: none;
 }
+/*h2.panel-heading{
+	margin:0 0;
+}
+
+.recipe.panel.panel-success.col-md-4.col-sm-6{
+	margin:10 0;
+}*/
